fix icon spacing, open links in new tab

--- a/src/components/ProjectDetailsView/ProjectDetailsView.module.scss
+++ b/src/components/ProjectDetailsView/ProjectDetailsView.module.scss
@@ -26,7 +26,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 40px 0 45px;
+    margin: 40px 0 30px;
     padding: 0 35px;
 
     @media (min-width: $desktopWidth) {
@@ -64,6 +64,7 @@
     .LinkCopy {
       font-family: 'Inter-Medium';
       font-size: 14px;
+      margin-bottom: 5px;
 
       @media (min-width: $desktopWidth) {
         font-size: 16px;
