--- a/src/components/TechnologyIcon/TechnologyIcon.module.scss
+++ b/src/components/TechnologyIcon/TechnologyIcon.module.scss
@@ -7,6 +7,7 @@
   font-family: 'Inter-Medium';
   font-size: 13px;
   justify-content: center;
+  margin-bottom: 15px;
   width: 30%;
 
   @media (min-width: $desktopWidth) {
